--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <p>cetis 32</p>
         <p class="view"><a href="http://github.com/orderedlist/minimal">Informatica <small>orderedlist/minimal</small></a></p>
         <ul>
-          <li><a href="https://github.com/orderedlist/minimal/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/orderedlist/minimal/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="http://github.com/orderedlist/minimal">Fork On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/orderedlist/minimal/zipball/master"> <strong>29</strong></a></li>
+          <li><a href="https://github.com/orderedlist/minimal/tarball/master"> <strong>10</strong></a></li>
+          <li><a href="http://github.com/orderedlist/minimal"> <strong>2005</strong></a></li>
         </ul>
       </header>
       <section>
