--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <header>
         <h1>jonatan fierro</h1>
         <p>cetis 32</p>
-        <p class="view"><a href="http://github.com/orderedlist/minimal">Informatica <small>orderedlist/minimal</small></a></p>
+        <p class="view"><a href="http://github.com/orderedlist/minimal">KHALI MUSIC <small>orderedlist/minimal</small></a></p>
         <ul>
           <li><a href="https://github.com/orderedlist/minimal/zipball/master">dia <strong>29</strong></a></li>
           <li><a href="https://github.com/orderedlist/minimal/tarball/master">mes <strong>10</strong></a></li>
