--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>jonatan fierro</h1>
-        <p>cetis 32</p>
+        <p>Neza City</p>
         <p class="view"><a href="http://github.com/orderedlist/minimal">KHALI MUSIC <small>orderedlist/minimal</small></a></p>
         <ul>
           <li><a href="https://github.com/orderedlist/minimal/zipball/master">dia <strong>29</strong></a></li>
