--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>FierrO</title>
+    <title>Jonatan-Fierro</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>jonatan fierro</h1>
+        <h1>FierrO</h1>
         <p>Neza City</p>
         <p class="view"><a href="http://github.com/orderedlist/minimal">KHALI MUSIC <small>orderedlist/minimal</small></a></p>
         <ul>
