--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <section>
         <h1>Prod. Hip-Hop</h1>
 
-        <p><em>View the <a href="http://github.github.com/github-flavored-markdown/sample_content.html">source of this content</a>.</em></p>
+        <p><em>R.A.P <a href="http://github.github.com/github-flavored-markdown/sample_content.html">Underground</a>.</em></p>
 
         <p>Let's get the whole "linebreak" thing out of the way. The next paragraph contains two phrases separated by a single newline character:</p>
 
