--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <p><em>R.A.P <a href="http://github.github.com/github-flavored-markdown/sample_content.html">Underground</a>.</em></p>
 
-        <p>Let's get the whole "linebreak" thing out of the way. The next paragraph contains two phrases separated by a single newline character:</p>
+        <p>Cuatr4 Elementos del Hip-Hop</p>
 
         <p>Roses are red<br>
         Violets are blue</p>
