--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 
         <p><em>R.A.P <a href="http://github.github.com/github-flavored-markdown/sample_content.html">Underground</a>.</em></p>
 
-        <p>Cuatr4 Elementos del Hip-Hop</p>
+        <p>Cuatr4 Elementos del Hip-Hop:</p>
 
-        <p>Roses are red<br>
-        Violets are blue</p>
+        <p>MCing (rapping)<br>
+        DJing (turntablism)</p>
 
-        <p>The next paragraph has the same phrases, but now they are separated by two spaces and a newline character:</p>
+        <p>breakdancing (bboying) y el graffiti.</p>
 
         <p>Roses are red<br><br>
         Violets are blue</p>
