--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         <p>MCing (rapping)<br>
         DJing (turntablism)</p>
 
-        <p>breakdancing (bboying) y el graffiti.</p>
+        <p>breakdancing (bboying)</p>
 
-        <p>Roses are red<br><br>
-        Violets are blue</p>
+        <p>El graffiti.<br><br>
+        </p>
 
         <p>Oh, and one thing I cannot stand is the mangling of words with multiple underscores in them like perform_complicated_task or do_this_and_do_that_and_another_thing.</p>
 
