--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         <p>El graffiti.<br><br>
         </p>
 
-        <p>Oh, and one thing I cannot stand is the mangling of words with multiple underscores in them like perform_complicated_task or do_this_and_do_that_and_another_thing.</p>
+        <p> </p>
 
-        <h2>A bit of the GitHub spice</h2>
+        <h2>Producciones:</h2>
 
         <p>In addition to the changes in the previous section, certain references are auto-linked:</p>
 
