--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 
         <ul>
           <li>Grabaciones</li>
-          <li>Mezcla y Mazterizacion" class="commit-link">mojombo@<tt>be6a8cc</tt></a></li>
-          <li>Beatz" class="commit-link">mojombo/god@<tt>be6a8cc</tt></a></li>
-          <li>#Num: <a href="https://github.com/github/product/issues/1" class="issue-link" title="Baseline: What is up in the air right now?">#1</a></li>
-          <li>User/#Num: mojombo#1</li>
-          <li>User/Project#Num: <a href="https://github.com/mojombo/god/issues/1" class="issue-link" title="The server is not available (or you do not have permissions to access it)">mojombo/god#1</a></li>
+          <li>Mezcla y Mazterizacion class="commit-link">mojombo@<tt>be6a8cc</tt></a></li>
+          <li>Beatz class="commit-link">mojombo/god@<tt>be6a8cc</tt></a></li>
+          <li>Videos <a href="https://github.com/github/product/issues/1" class="issue-link" title="Baseline: What is up in the air right now?">#1</a></li>
+          <li>Correo:jonatangarciafierro8@gmail.coms</li>
+          <li>Numero(contaco) class="issue-link" title="The server is not available (or you do not have permissions to access it)">mojombo/god#1</a></li>
         </ul>
 
         <p>These are dangerous goodies though, and we need to make sure email addresses don't get mangled:</p>
