--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <li>Mezcla y Mazterizacion </tt></a></li>
           <li>Beatz </tt></a></li>
           <li>Videos </a></li>
-          <li>Correo:jonatangarciafierro8@gmail.coms</li>
+          <li>Correo:jonatangarciafierro8@gmail.com</li>
           <li>Numero(contaco) </a></li>
         </ul>
 
