--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <li>Beatz </tt></a></li>
           <li>Videos </a></li>
           <li>Correo:jonatangarciafierro8@gmail.com</li>
-          <li>Numero(contaco) </a></li>
+          <li>Numero(contacto) </a></li>
         </ul>
 
         <p>These are dangerous goodies though, and we need to make sure email addresses don't get mangled:</p>
