--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
           <li>Numero(contacto) </a></li>
         </ul>
 
-        <p>These are dangerous goodies though, and we need to make sure email addresses don't get mangled:</p>
+        <p>Contactanos y comienza a crear tus proyectos.</p>
 
-        <p>My email addy is <a href="mailto:tom@github.com">tom@github.com</a>.</p>
+        <p>>tom@github.com</a>.</p>
 
         <h2>Math is hard, let's go shopping</h2>
 
