--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         <p></a></p>
 
-        <h2>Math is hard, let's go shopping</h2>
+        <h2>Generos Urbanos</h2>
 
         <p>In first grade I learned that 5 &gt; 3 and 2 &lt; 7. Maybe some arrows. 1 -&gt; 2 -&gt; 3. 9 &lt;- 8 &lt;- 7.</p>
 
@@ -66,27 +66,23 @@
 
         <h2>We all like making lists</h2>
 
-        <p>The above header should be an H2 tag. Now, for a list of fruits:</p>
+        <p>reggaetón, dembow, dancehall, trap, rap, raggamuffin y otros.</p>
 
         <ul>
-          <li>Red Apples</li>
-          <li>Purple Grapes</li>
-          <li>Green Kiwifruits</li>
+          <li>Reggaeton</li>
+          <li>Dembow y Rkt</li>
+          <li>Rap y Trap</li>
         </ul>
 
-        <p>Let's get crazy:</p>
+        <p>¿Que es el Hip-Hop?</p>
 
         <ol>
           <li>
-            <p>This is a list item with two paragraphs. Lorem ipsum dolor<br>
-            sit amet, consectetuer adipiscing elit. Aliquam hendrerit<br>
-            mi posuere lectus.</p>
+            <p>Estilo de música de baile nacido en Estados Unidos de América en la década de 1970</p>
 
-            <p>Vestibulum enim wisi, viverra nec, fringilla in, laoreet<br>
-            vitae, risus. Donec sit amet nisl. Aliquam semper ipsum<br>
-            sit amet velit.</p>
+            <p>Derivación del funk y que se caracteriza por su base electrónica y por estar asociado a manifestaciones alternativas como el break dance o el graffiti.</p>
           </li>
-          <li><p>Suspendisse id sem consectetuer libero luctus adipiscing.</p></li>
+          <li><p>El hip hop es más que un género musical, es una corriente cultural en sí misma, que abarca distintas áreas.</p></li>
         </ol>
 
         <p>What about some code <strong>in</strong> a list? That's insane, right?</p>
