--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
 
         <p></a></p>
 
-        <h2>Generos Urbanos</h2>
+        <h2>¿Que caracteriza el genero urbano?</h2>
 
-        <p>In first grade I learned that 5 &gt; 3 and 2 &lt; 7. Maybe some arrows. 1 -&gt; 2 -&gt; 3. 9 &lt;- 8 &lt;- 7.</p>
+        <p>La calle, las farras, los amores y la sensualidad son fuentes de inspiración para este género, que también agrupa al trap, la salsa choke, el conocido “aleteo”, el hip hop y todo lo que suene a barrio. Maybe some arrows. 1 -&gt; 2 -&gt; 3. 9 &lt;- 8 &lt;- 7.</p>
 
         <p>Triangles man! a^2 + b^2 = c^2</p>
 
-        <h2>We all like making lists</h2>
+        <h2>Generos Urbanos</h2>
 
         <p>reggaetón, dembow, dancehall, trap, rap, raggamuffin y otros.</p>
 
