--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         <h2>¿Que caracteriza el genero urbano?</h2>
 
-        <p>La calle, las farras, los amores y la sensualidad son fuentes de inspiración para este género, que también agrupa al trap, la salsa choke, el conocido “aleteo”, el hip hop y todo lo que suene a barrio. Maybe some arrows. 1 -&gt; 2 -&gt; 3. 9 &lt;- 8 &lt;- 7.</p>
+        <p>La calle, las farras, los amores y la sensualidad son fuentes de inspiración para este género, que también agrupa al trap, la salsa choke, el conocido “aleteo”, el hip hop y todo lo que suene a barrio.</p>
 
         <p>Triangles man! a^2 + b^2 = c^2</p>
 
@@ -85,18 +85,18 @@
           <li><p>El hip hop es más que un género musical, es una corriente cultural en sí misma, que abarca distintas áreas.</p></li>
         </ol>
 
-        <p>What about some code <strong>in</strong> a list? That's insane, right?</p>
+        <p>Tipos de Rap</p>
 
         <ol>
           <li>
-            <p>In Ruby you can map like this:</p>
+            <p>Boombap</p>
 
-            <pre><code>['a', 'b'].map { |x| x.uppercase }</code></pre>
+            <pre><code>Boom bap hace referencia a una patada de batería “boom” seguido del crujiente “bap” de la caja</code></pre>
           </li>
           <li>
-            <p>In Rails, you can do a shortcut:</p>
+            <p>Gangsta Rap</p>
 
-            <pre><code>['a', 'b'].map(&amp;:uppercase)</code></pre>
+            <pre><code>La música rap está hecha por o para gánsteres y aquellos afectados por este fenómeno. </code></pre>
           </li>
         </ol>
 
