--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
           </li>
         </ol>
 
-        <p>Some people seem to like definition lists</p>
+        <p>Samples</p>
 
         <dl>
-          <dt>Lower cost</dt>
-          <dd>The new version of this product costs significantly less than the previous one!</dd>
-          <dt>Easier to use</dt>
-          <dd>We've changed the product so that it's much easier to use!</dd>
+          <dt>G-Funk</dt>
+          <dd>G-funk es un subgénero del hip hop que surgió a partir del gangsta rap de la costa oeste a principios de la década de los 90.</dd>
+          <dt>Boombap</dt>
+          <dd>hip hop desde finales de los 80's hasta principios de los 90's.</dd>
         </dl>
 
         <h2>I am a robot</h2>
